// These are the messages that get persisted - the events, plus the current state (Cart) for snapshots.
syntax = "proto3";

package com.example.crud.shoppingcart.persistence;

option go_package = "crud.shoppingcart.persistence";

message LineItem {
    string userId = 1;
    string productId = 2;
    string name = 3;
    int32 quantity = 4;
}

// The shopping cart state for a user.
message Cart {
    repeated LineItem items = 1;
}

// The whole shopping cart state.
message AllCart {
    repeated Cart cartsList = 1;
    map<string, Cart> cartsMap = 2;
}

